<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".PizzaOrder">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Order Pizza"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:hint="Type your Name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            />

        <CheckBox
            android:id="@+id/chicken_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/Chicken"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/bacon_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bacon"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16sp"/>

        <CheckBox
            android:id="@+id/pepperoni_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pepperoni"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16sp"/>

        <CheckBox
            android:id="@+id/op_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OP"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16sp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-"
                />


            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"
                />

            <android.support.v7.widget.CardView
                android:id="@+id/orderPizzaCardView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginTop="56dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="orderPizzaMain"
                android:visibility="visible"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="25dp"
                app:cardElevation="12dp">

                <!-- Clickable, Foreground are set to make card view look like clickable-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Order"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginTop="56dp"
                android:layout_marginRight="10dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="25dp"
                app:cardElevation="12dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="orderSummary"
                android:id="@+id/orderSummary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Summary"
                        android:textColor="#fff"
                        android:textSize="16sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginTop="56dp"
                android:visibility="visible"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="25dp"
                app:cardElevation="12dp"
                android:clickable="true"
                android:onClick="callStore"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/callPizza">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/callStore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Call"
                        android:textColor="#fff"
                        android:textSize="16sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

